fix: load inactive map pois in builder
